<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#23262f"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="#1b1c21"
            app:titleTextColor="#EEE"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light">
        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>
    <ScrollView
        android:padding="16dp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3">
        <LinearLayout
            android:animateLayoutChanges="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <io.github.tiarait.extendedchipgroup.ExtendedChipGroup
                android:id="@+id/chip_group"
                app:maxRow="2"
                app:itemSpacing="6dp"
                app:additionalTextColor="@color/colorPrimary"
                app:additionalChipColor="@color/colorDarkBtn"
                app:additionalChipColorPressed="@color/colorDarkBtnSecondary"
                app:additionalChipMore="@string/btn_show"
                app:additionalChipHide="@string/btn_hide"
                app:singleSelection="false"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>
    </ScrollView>
    <ScrollView
        android:padding="16dp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3">
        <LinearLayout
            android:animateLayoutChanges="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textSeparEdit"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="83dp"
                    android:textSize="20sp"
                    android:textColorHint="@color/colorDarkErrorSecondary"
                    android:hint="@string/separator"/>
                <NumberPicker
                    android:id="@+id/picker"
                    android:layout_width="100dp"
                    android:layout_height="100dp"/>
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textShowEdit"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:textColorHint="@color/colorDarkError"
                    android:text="@string/btn_show"
                    android:hint="@string/btn_show_hint"/>
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textHideEdit"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:textColorHint="@color/colorDarkError"
                    android:text="@string/btn_hide"
                    android:hint="@string/btn_hide_hint"/>
            </LinearLayout>
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textEdit"
                android:layout_width="match_parent"
                android:hint="@string/input_tags"
                android:text="@string/test"
                android:layout_height="match_parent"/>
        </LinearLayout>
    </ScrollView>


</LinearLayout>